add osmia merged subcommand
